--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-psycopg2==2.8.6
+psycopg2==2.8.6 # Não instalar na EC2
+psycopg2-binary==2.8.6 #Instalar apenas na EC2
 Flask==1.1.2
 gunicorn==20.0.4
 simplejson==3.17.2
